--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@digvan/sscheduler",
-  "version": "0.0.2",
+  "version": "1.3.3",
   "description": "Flexible scheduler to find free time slots in the schedule of a resource",
   "main": "./dist/index.js",
   "scripts": {
+    "prepare": "rm -rf dist/* && tsc",
     "compile": "rm -rf dist/* && tsc",
     "lint": "tslint ./src/{,**/}*.ts ./tests/{,**/}*.ts --format verbose",
     "test": "npm run test:unit",
@@ -35,7 +36,7 @@
   },
   "dependencies": {
     "lodash": "^4.13.1",
-    "moment": "^2.21.0"
+    "moment": "^2.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.41",
@@ -55,9 +56,9 @@
     "gulp-util": "^3.0.8",
     "mocha": "^2.5.3",
     "nyc": "^8.4.0",
-    "ts-node": "^1.6.1",
-    "tslint": "^4.3.1",
-    "typescript": "2.1.5",
+    "ts-node": "^7.0.1",
+    "tslint": "^4.5.1",
+    "typescript": "3.2.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
