--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@digvan/sscheduler",
-  "version": "1.3.3",
-  "description": "Flexible scheduler to find free time slots in the schedule of a resource",
+  "version": "1.3.5",
+  "description": "Flexible scheduler to find free time slots in the schedule of a resource with timezone support",
   "main": "./dist/index.js",
   "scripts": {
     "prepare": "rm -rf dist/* && tsc",
