--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@digvan/sscheduler",
-  "version": "1.3.5",
+  "name": "@hanskristoffer/sscheduler",
+  "version": "1.3.6",
   "description": "Flexible scheduler to find free time slots in the schedule of a resource with timezone support",
   "main": "./dist/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/digvan/node-sscheduler.git"
+    "url": "git+https://github.com/hanskristoffer/node-sscheduler.git"
   },
   "keywords": [
     "scheduler",
