--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "files": [
     "src/index.ts",
-    "src/Scheduler.ts"
+    "src/SchedulerTimezone.ts"
   ],
   "compilerOptions": {
     "target": "es2015",
