--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hanskristoffer/sscheduler",
+  "name": "@abdizriel/sscheduler",
   "version": "1.3.23",
   "description": "Flexible scheduler to find free time slots in the schedule of a resource with timezone support",
   "main": "./dist/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hanskristoffer/node-sscheduler.git"
+    "url": "git+https://github.com/Abdizriel/node-sscheduler.git"
   },
   "keywords": [
     "scheduler",
