--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@abdizriel/sscheduler",
   "version": "1.3.23",
   "description": "Flexible scheduler to find free time slots in the schedule of a resource with timezone support",
-  "main": "./dist/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "prepare": "rm -rf dist/* && tsc",
     "compile": "rm -rf dist/* && tsc",
